@@ -8,6 +8,7 @@
   * added support for pre-4.1 passwords in a 4.1 connection
   * added inj.query_time and inj.response_time into the lua scripts
   * added resultset.affected_rows and resultset.insert_id
+  * added proxy.VERSION
 
   * changed --proxy.profiling to --proxy-skip-profiling
 
